--- a/requirements-transformers.txt
+++ b/requirements-transformers.txt
@@ -1,5 +1,8 @@
 pillow==11.0.0
 python-dotenv
 
-pytest
 transformers @ git+https://github.com/huggingface/transformers@33868a057c02f0368ba63bd1edb746be38fe3d90
+--index-url https://download.pytorch.org/whl/cpu
+torch==2.5.1+cpu
+torchvision==0.20.1+cpu
+torchaudio==2.5.1+cpu
