--- a/requirements-transformers.txt
+++ b/requirements-transformers.txt
@@ -3,6 +3,7 @@ python-dotenv
 plotly==5.24.1
 kaleido==0.2.1
 igraph==0.11.8
+python-magic==0.4.27
 
 transformers @ git+https://github.com/huggingface/transformers@33868a057c02f0368ba63bd1edb746be38fe3d90
 --index-url https://download.pytorch.org/whl/cpu
