Добавил учетные данные от MongoDB в `.env.example`

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
 OPENAI_API_KEY=
 
-# Optional
+# OpenAI, опциональные
 OPENAI_ORG_ID= 
 OPENAI_PROJECT_ID=
+
+# MongoDB, опциональные
+MONGODB_HOST=
+MONGODB_PORT=
+MONGODB_USERNAME=
+MONGODB_PASSWORD=
