--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
   "kaleido==0.2.1",
   "igraph==0.11.8",
   "python-magic==0.4.27",
-  "motor==3.6.0",
+  "pymongo==4.10.1",
 ]
 
 
