--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,6 +5,7 @@ kaleido==0.2.1
 igraph==0.11.8
 python-magic==0.4.27
 pymongo==4.10.1
+python-magic-bin==0.4.14; platform_system == "Windows"
 
 pytest
 build==1.2.2.post1
