--- a/requirements-transformers.txt
+++ b/requirements-transformers.txt
@@ -5,6 +5,7 @@ kaleido==0.2.1
 igraph==0.11.8
 python-magic==0.4.27
 pymongo==4.10.1
+python-magic-bin==0.4.14; platform_system == "Windows"
 
 transformers @ git+https://github.com/huggingface/transformers@33868a057c02f0368ba63bd1edb746be38fe3d90
 --index-url https://download.pytorch.org/whl/cpu
